--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,28 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+*.project
+*.svn
+.settings/
+*.settings
+target/**
+/target
+target/
+**/target
+.classpath
+META-INF/
+classes/
+*.factorypath
+*.iml
+.idea/**
+**/logs
+*.temp
+.gradle/
+build/
+*/build/
+gradlew
+*/.DS_Store
+.DS_Store
+*/*.iml
