--- a/yfwork/yfwork-common/yfwork-common-api/pom.xml
+++ b/yfwork/yfwork-common/yfwork-common-api/pom.xml
@@ -16,5 +16,12 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+    </dependencies>
 
 </project>
