修改nacos配置文件

--- a/yfwork/yfwork-common/yfwork-common-service/src/main/resources/bootstrap.properties
+++ b/yfwork/yfwork-common/yfwork-common-service/src/main/resources/bootstrap.properties
@@ -9,7 +9,7 @@ spring.cloud.nacos.discovery.server-addr=${nacos.address}
 spring.cloud.nacos.config.server-addr=${nacos.address}
 spring.cloud.nacos.config.namespace=${nacos.namespace}
 #spring.profiles.active=properties
-spring.cloud.nacos.config.file-extension=properties
+spring.cloud.nacos.config.file-extension=yaml
 spring.cloud.nacos.config.shared-configs[0]=public.yaml
 spring.cloud.nacos.config.shared-configs[0].refresh=true
 logging.file.path=.
